--- a/index.html
+++ b/index.html
@@ -19,196 +19,209 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="item-body">
     <!--Header-->
-    <header>
-      <nav>
-        <a class="header-logo" href="./index.html"
-          >Web<span class="span-header-logo">Studio</span></a
-        >
-        <ul>
-          <li>
-            <a class="nav-link" href="./index.html">Studio</a>
-          </li>
-          <li>
-            <a class="nav-link" href="">Portfolio</a>
-          </li>
-          <li>
-            <a class="nav-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+    <header class="header">
+      <div class="container header-inner">
+        <nav class="header-nav">
+          <a class="header-logo" href="./index.html"
+            >Web<span class="span-header-logo">Studio</span></a
+          >
+          <ul class="page-nav">
+            <li class="page-list">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="page-list">
+              <a class="nav-link" href="">Portfolio</a>
+            </li>
+            <li class="page-list">
+              <a class="nav-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-      <address class="contacts">
-        <ul>
-          <li>
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contacts-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="contacts">
+          <ul class="mail-nav">
+            <li class="mail-list">
+              <a class="contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <!-- Main -->
-
     <main>
       <!-- Section 1 Effective Solutions for Your Business -->
       <section class="section-one">
-        <h1 class="section-one-title">Effective Solutions for Your Business</h1>
-        <button class="button" type="button">Order Service</button>
+        <div class="container section-effective">
+          <h1 class="section-one-title">
+            Effective Solutions for Your Business
+          </h1>
+          <button class="button" type="button">Order Service</button>
+        </div>
       </section>
       <!-- Section 2 Our skills -->
-      <section>
-        <h2>Our skills</h2>
-        <ul>
-          <li>
-            <h3 class="section-two-title">Strategy</h3>
-            <p class="section-two-paragraph">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-two-title">Punctuality</h3>
-            <p class="section-two-paragraph">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-two-title">Diligence</h3>
-            <p class="section-two-paragraph">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-two-title">Technologies</h3>
-            <p class="section-two-paragraph">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="section-two">
+        <div class="container section-skills">
+          <h2 class="visually-hidden">Our skills</h2>
+          <ul>
+            <li>
+              <h3 class="section-two-title">Strategy</h3>
+              <p class="section-two-paragraph">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-two-title">Punctuality</h3>
+              <p class="section-two-paragraph">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-two-title">Diligence</h3>
+              <p class="section-two-paragraph">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-two-title">Technologies</h3>
+              <p class="section-two-paragraph">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Section 3 Our Team -->
       <section class="section-three">
-        <h2 class="section-three-title">Our Team</h2>
-        <ul>
-          <li class="team-background">
-            <img
-              src="./images/team/img-mark.jpg"
-              alt="Mark Guerrero"
-              width="264"
-            />
-            <h3 class="team-title">Mark Guerrero</h3>
-            <p class="team-paragraph">Product Designer</p>
-          </li>
-          <li class="team-background">
-            <img src="./images/team/img-tom.jpg" alt="Tom Ford" width="264" />
-            <h3 class="team-title">Tom Ford</h3>
-            <p class="team-paragraph">Frontend Developer</p>
-          </li>
-          <li class="team-background">
-            <img
-              src="./images/team/img-camila.jpg"
-              alt="Camila Garcia"
-              width="264"
-            />
-            <h3 class="team-title">Camila Garcia</h3>
-            <p class="team-paragraph">Marketing</p>
-          </li>
-          <li class="team-background">
-            <img
-              src="./images/team/img-daniel.jpg"
-              alt="Daniel Wilson"
-              width="264"
-            />
-            <h3 class="team-title">Daniel Wilson</h3>
-            <p class="team-paragraph">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container section-team">
+          <h2 class="section-three-title">Our Team</h2>
+          <ul>
+            <li class="team-background">
+              <img
+                src="./images/team/img-mark.jpg"
+                alt="Mark Guerrero"
+                width="264"
+              />
+              <h3 class="team-title">Mark Guerrero</h3>
+              <p class="team-paragraph">Product Designer</p>
+            </li>
+            <li class="team-background">
+              <img src="./images/team/img-tom.jpg" alt="Tom Ford" width="264" />
+              <h3 class="team-title">Tom Ford</h3>
+              <p class="team-paragraph">Frontend Developer</p>
+            </li>
+            <li class="team-background">
+              <img
+                src="./images/team/img-camila.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
+              <h3 class="team-title">Camila Garcia</h3>
+              <p class="team-paragraph">Marketing</p>
+            </li>
+            <li class="team-background">
+              <img
+                src="./images/team/img-daniel.jpg"
+                alt="Daniel Wilson"
+                width="264"
+              />
+              <h3 class="team-title">Daniel Wilson</h3>
+              <p class="team-paragraph">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Section 4 Our Portfolio -->
-      <section>
-        <h2 class="section-four-title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/portfolio/banking-app.jpg"
-              alt="Banking app"
-              width="360"
-            />
-            <h3 class="section-four-app">Banking App</h3>
-            <p class="section-four-paragraph">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/cashless-payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-            />
-            <h3 class="section-four-app">Cashless Payment</h3>
-            <p class="section-four-paragraph">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/meditation-app.jpg"
-              alt="Meditation App"
-              width="360"
-            />
-            <h3 class="section-four-app">Meditation App</h3>
-            <p class="section-four-paragraph">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/taxi-service.jpg"
-              alt="Taxi Service"
-              width="360"
-            />
-            <h3 class="section-four-app">Taxi Service</h3>
-            <p class="section-four-paragraph">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/screen-illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h3 class="section-four-app">Screen Illustrations</h3>
-            <p class="section-four-paragraph">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/online-courses.jpg"
-              alt="Online Courses"
-              width="360"
-            />
-            <h3 class="section-four-app">Online Courses</h3>
-            <p class="section-four-paragraph">Marketing</p>
-          </li>
-        </ul>
+      <section class="section-four">
+        <div class="container section-portfolio">
+          <h2 class="section-four-title">Our Portfolio</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/portfolio/banking-app.jpg"
+                alt="Banking app"
+                width="360"
+              />
+              <h3 class="section-four-app">Banking App</h3>
+              <p class="section-four-paragraph">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <h3 class="section-four-app">Cashless Payment</h3>
+              <p class="section-four-paragraph">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/meditation-app.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <h3 class="section-four-app">Meditation App</h3>
+              <p class="section-four-paragraph">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <h3 class="section-four-app">Taxi Service</h3>
+              <p class="section-four-paragraph">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/screen-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <h3 class="section-four-app">Screen Illustrations</h3>
+              <p class="section-four-paragraph">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <h3 class="section-four-app">Online Courses</h3>
+              <p class="section-four-paragraph">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Footer -->
 
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"
-        >Web<span class="span-footer-logo">Studio</span></a
-      >
-      <p class="footer-paragraph">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="footer-logo" href="./index.html"
+          >Web<span class="span-footer-logo">Studio</span></a
+        >
+        <p class="footer-paragraph">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
