add Main and Footer blocks

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <main>
       <!-- Section 1 Effective Solutions for Your Business -->
       <section class="section-one">
-        <div class="container section-effective">
+        <div class="container">
           <h1 class="section-one-title">
             Effective Solutions for Your Business
           </h1>
@@ -70,31 +70,31 @@
       </section>
       <!-- Section 2 Our skills -->
       <section class="section-two">
-        <div class="container section-skills">
+        <div class="container">
           <h2 class="visually-hidden">Our skills</h2>
-          <ul>
-            <li>
+          <ul class="section-two-list">
+            <li class="section-two-item">
               <h3 class="section-two-title">Strategy</h3>
               <p class="section-two-paragraph">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="section-two-item">
               <h3 class="section-two-title">Punctuality</h3>
               <p class="section-two-paragraph">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="section-two-item">
               <h3 class="section-two-title">Diligence</h3>
               <p class="section-two-paragraph">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="section-two-item">
               <h3 class="section-two-title">Technologies</h3>
               <p class="section-two-paragraph">
                 Design practice focused on digital experiences. We bring forth a
@@ -107,22 +107,26 @@
 
       <!-- Section 3 Our Team -->
       <section class="section-three">
-        <div class="container section-team">
+        <div class="container">
           <h2 class="section-three-title">Our Team</h2>
-          <ul>
+          <ul class="section-three-list">
             <li class="team-background">
               <img
                 src="./images/team/img-mark.jpg"
                 alt="Mark Guerrero"
                 width="264"
               />
-              <h3 class="team-title">Mark Guerrero</h3>
-              <p class="team-paragraph">Product Designer</p>
+              <div class="section-team">
+                <h3 class="team-title">Mark Guerrero</h3>
+                <p class="team-paragraph">Product Designer</p>
+              </div>
             </li>
             <li class="team-background">
               <img src="./images/team/img-tom.jpg" alt="Tom Ford" width="264" />
-              <h3 class="team-title">Tom Ford</h3>
-              <p class="team-paragraph">Frontend Developer</p>
+              <div class="section-team">
+                <h3 class="team-title">Tom Ford</h3>
+                <p class="team-paragraph">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-background">
               <img
@@ -130,8 +134,10 @@
                 alt="Camila Garcia"
                 width="264"
               />
-              <h3 class="team-title">Camila Garcia</h3>
-              <p class="team-paragraph">Marketing</p>
+              <div class="section-team">
+                <h3 class="team-title">Camila Garcia</h3>
+                <p class="team-paragraph">Marketing</p>
+              </div>
             </li>
             <li class="team-background">
               <img
@@ -139,8 +145,10 @@
                 alt="Daniel Wilson"
                 width="264"
               />
-              <h3 class="team-title">Daniel Wilson</h3>
-              <p class="team-paragraph">UI Designer</p>
+              <div class="section-team">
+                <h3 class="team-title">Daniel Wilson</h3>
+                <p class="team-paragraph">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -148,44 +156,52 @@
 
       <!-- Section 4 Our Portfolio -->
       <section class="section-four">
-        <div class="container section-portfolio">
+        <div class="container">
           <h2 class="section-four-title">Our Portfolio</h2>
-          <ul>
-            <li>
+          <ul class="section-four-list">
+            <li class="section-four-item">
               <img
                 src="./images/portfolio/banking-app.jpg"
                 alt="Banking app"
                 width="360"
               />
-              <h3 class="section-four-app">Banking App</h3>
-              <p class="section-four-paragraph">App</p>
+              <div class="portfolio-list-div">
+                <h3 class="section-four-app">Banking App</h3>
+                <p class="section-four-paragraph">App</p>
+              </div>
             </li>
-            <li>
+            <li class="section-four-item">
               <img
                 src="./images/portfolio/cashless-payment.jpg"
                 alt="Cashless Payment"
                 width="360"
               />
-              <h3 class="section-four-app">Cashless Payment</h3>
-              <p class="section-four-paragraph">Marketing</p>
+              <div class="portfolio-list-div">
+                <h3 class="section-four-app">Cashless Payment</h3>
+                <p class="section-four-paragraph">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="section-four-item">
               <img
                 src="./images/portfolio/meditation-app.jpg"
                 alt="Meditation App"
                 width="360"
               />
-              <h3 class="section-four-app">Meditation App</h3>
-              <p class="section-four-paragraph">App</p>
+              <div class="portfolio-list-div">
+                <h3 class="section-four-app">Meditation App</h3>
+                <p class="section-four-paragraph">App</p>
+              </div>
             </li>
-            <li>
+            <li class="section-four-item">
               <img
                 src="./images/portfolio/taxi-service.jpg"
                 alt="Taxi Service"
                 width="360"
               />
-              <h3 class="section-four-app">Taxi Service</h3>
-              <p class="section-four-paragraph">Marketing</p>
+              <div class="portfolio-list-div">
+                <h3 class="section-four-app">Taxi Service</h3>
+                <p class="section-four-paragraph">Marketing</p>
+              </div>
             </li>
             <li>
               <img
@@ -193,8 +209,10 @@
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h3 class="section-four-app">Screen Illustrations</h3>
-              <p class="section-four-paragraph">Design</p>
+              <div class="portfolio-list-div">
+                <h3 class="section-four-app">Screen Illustrations</h3>
+                <p class="section-four-paragraph">Design</p>
+              </div>
             </li>
             <li>
               <img
@@ -202,8 +220,10 @@
                 alt="Online Courses"
                 width="360"
               />
-              <h3 class="section-four-app">Online Courses</h3>
-              <p class="section-four-paragraph">Marketing</p>
+              <div class="portfolio-list-div">
+                <h3 class="section-four-app">Online Courses</h3>
+                <p class="section-four-paragraph">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
