edit errors to homework_3

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <p class="section-four-paragraph">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="section-four-item">
               <img
                 src="./images/portfolio/screen-illustrations.jpg"
                 alt="Screen Illustrations"
@@ -214,7 +214,7 @@
                 <p class="section-four-paragraph">Design</p>
               </div>
             </li>
-            <li>
+            <li class="section-four-item">
               <img
                 src="./images/portfolio/online-courses.jpg"
                 alt="Online Courses"
